removed grid row in nav, added in HeadersContainer and removed aligned items.  This has stopped the margin conflict

--- a/My_Web/src/components/Headers.module.css
+++ b/My_Web/src/components/Headers.module.css
@@ -7,7 +7,6 @@
 
 .Navigation {
   grid-column: 1;
-  grid-row: 1;
   display: flex;
   flex-direction: column;
   margin-top: 15rem;
@@ -67,9 +66,11 @@
 
 .HeadersContainer {
   grid-column: 2;
+  grid-row: 1;
+  height: 600px;
   display: flex;
   justify-content: center; /* Center the content horizontally */
-  align-items: center; /* Center the content vertically */
+  /* Center the content vertically */
   margin-top: 2rem;
 }
 
